<resources>
    <string name="app_name">Logogenia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="str_senas">Señas</string>
    <string name="str_presentW">Te presento palabras</string>
    <string name="str_howStartW">¿Cómo empieza esta palabra?</string>
    <string name="str_dact">Dactilológico</string>
    <string name="str_presentL">Te presento las letras</string>
    <string name="str_whatW">¿Qué letra es?</string>
    <string name="str_lW">Leer y escribir</string>
    <string name="str_read">Leer</string>
    <string name="str_write">Escribir</string>
    <string name="str_diccionario">Diccionario</string>
    <string name="str_a">a</string>
    <string name="str_b">b</string>
    <string name="str_c">c</string>
    <string name="str_d">d</string>
    <string name="str_e">e</string>
    <string name="str_f">f</string>
    <string name="str_g">g</string>
    <string name="str_h">h</string>
    <string name="str_i">i</string>
    <string name="str_j">j</string>
    <string name="str_k">k</string>
    <string name="str_l">l</string>
    <string name="str_m">m</string>
    <string name="str_n">n</string>
    <string name="str_o">o</string>
    <string name="str_p">p</string>
    <string name="str_q">q</string>
    <string name="str_r">r</string>
    <string name="str_s">s</string>
    <string name="str_t">t</string>
    <string name="str_u">u</string>
    <string name="str_v">v</string>
    <string name="str_w">w</string>
    <string name="str_x">x</string>
    <string name="str_y">y</string>
    <string name="str_z">z</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
