<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnSenas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_senas"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/llShowSenas"
            android:visibility="gone">
            <Button
                android:id="@+id/btnPresentW"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/str_presentW"
            android:layout_weight="0.5"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/str_howStartW"
                android:layout_weight="0.5"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnDactilogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_dact"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/llShowDacti"
            android:visibility="gone">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/str_presentL"
                android:layout_weight="0.5"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/str_whatW"
                android:layout_weight="0.5"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnLeerEsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_lW"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone"
            android:id="@+id/llSReadWrite">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/str_read"
                android:layout_weight="0.5"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/str_write"
                android:layout_weight="0.5"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnDiccionario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_diccionario"/>

    </LinearLayout>

</LinearLayout>